--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="" class="form">
+    <form action="" class="form" method="POST" enctype="text/plain">
       Subject of message:
       <br />
       <input type="text" name="inputbox1" value="Name" class="name" />
