--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <form action="" class="form" method="">
-      Subject of message:
+      Name:
       <br />
       <input type="text" name="inputbox1" value="Name" class="name" />
       <p>
-        Send to:
+        Email:
         <br />
         <input type="email" name="inputbox2" value="email" class="email" />
       </p>
-      Send blind cc to:
+      Message:
       <br />
       <input type="text" name="inputbox3" class="message" />
       <input type="submit" value="Submit" class="submit" />
