--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <form action="" class="form" method="">
       Name:
       <br />
-      <input type="text" name="inputbox1" value="" class="name" />
+      <input type="text" name="inputbox1" value="name" class="name" />
       <p>
         Email:
         <br />
-        <input type="email" name="inputbox2" value="" class="email" />
+        <input type="email" name="inputbox2" value="email" class="email" />
       </p>
       Message:
       <br />
