--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Message:
       <br />
       <input type="text" name="inputbox3" class="message" />
-      <input type="submit" value="Submit" class="submit" />
+      <input  value="Submit" class="submit" />
     </form>
     <script src="./index.js"></script>
   </body>
