--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Message:
       <br />
       <input type="text" name="inputbox3" class="message" />
-      <button  type="submit" class="submit">Send</button>
+       <input type="submit" class="submit" value="Submit"/>
     </form>
     <script src="./index.js"></script>
   </body>
